After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724499 - color: Toolbar buttons are not refreshed when user changes profile
color: Toolbar buttons are not refreshed when user changes profile
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Color
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-16 20:48 UTC by Damián Nohales
Modified: 2014-02-24 11:48 UTC
See Also:
GNOME target: ---
GNOME version: 3.11/3.12


Attachments
color: Refresh toolbar buttons when profile has changed (13.47 KB, patch)
2014-02-16 20:55 UTC, Damián Nohales
none Details | Review
color: Refresh toolbar buttons when profile has changed (2.28 KB, patch)
2014-02-17 22:53 UTC, Damián Nohales
none Details | Review

Description Damián Nohales 2014-02-16 20:48:22 UTC
When user press "Enable" to change color profile, toolbar buttons are not refreshed and, for example, "Enable" button still showing instead of show, for example, "Set for all users" button, corresponding to an enabled profile.
Comment 1 Damián Nohales 2014-02-16 20:55:10 UTC
Created attachment 269329 [details] [review]
color: Refresh toolbar buttons when profile has changed

This patch force toolbar button refresh when color profile has changed, the patch is maybe needlessly big just because I needed to move methods of place.

Any feedback will be greatly appreciated.
Comment 2 Richard Hughes 2014-02-17 08:39:18 UTC
Can you just add a prototype at the top of the file to avoid moving all the functions around? Thanks.
Comment 3 Damián Nohales 2014-02-17 22:53:33 UTC
Created attachment 269475 [details] [review]
color: Refresh toolbar buttons when profile has changed

Here we go.
Comment 4 Richard Hughes 2014-02-24 11:48:56 UTC
Pushed, thanks.