color: Refresh toolbar buttons when profile has changed

https://bugzilla.gnome.org/show_bug.cgi?id=724499

Signed-off-by: Richard Hughes <richard@hughsie.com>